--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,9 @@ ul {
 img {
   display: block;
 }
+button {
+  cursor: pointer;
+}
 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -38,13 +41,15 @@ img {
   -moz-osx-font-smoothing: grayscale;
 
   max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  padding: 24px;
 }
 td,
 th {
   border-left: 1px solid #000;
   border-right: 1px solid #000;
   padding: 0;
+}
+body {
+  color: #000;
+  background-color: #fff;
 }
